# julython.org

./: .air.toml  .continueignore  .cursorrules  .gitignore  .gitmodules  .mcp.json  .travis.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  Vagrantfile  alembic.ini  api.py  app.yaml  build_less.sh  cron.yaml  debug_toolbar  docker-compose-prod.yml  docker-compose.env  docker-compose.yml  dotenv  fabfile.py  flask  go.mod  go.sum  index.yaml  iso8601.py  jsl.conf  julython.conf  main.py  manage.py  memcache.py  pyproject.toml  queue.yaml  requirements-dev.txt  requirements.txt  runserver.sh  (+4 more)
.github/workflows/: ci.yml
.kilo/: kilo.jsonc  skills
.pi/: settings.json
.pi/plans/: player-boards.md  webhook-placeholder-users.md
angular/app/: index.html
assets/: Gruntfile.js  README.md  grunt.js  package.json
assets/less/: _badges.less  _base.less  _colors.less  _fonts.less  _projects.less  _responsive.less  layout.less
cmd/assetgen/: main.go
cmd/i18nsync/: main.go  main_test.go  ollama.go  ollama_test.go
cmd/server/: main.go
conf/init/: julython.conf  nginx.conf
conf/nginx/: nginx.conf
data/: bitbucket1.json  bitbucket2.json  bitbucket3.json  github-fork.json  github1.json  github2.json  github3.json  github4.json  githubroman.json
db/: boards.sql  games.sql  players.sql  projects.sql  teams.sql  users.sql
dev/: package-lock.json  package.json
docs/: templ-conventions.md
internal/api/: error_page.go  error_page_test.go  errors.go  errors_test.go  logging.go  (+4 more)
july/: admin.py  api.py  app.py  channel.py  cli.py  context.py  cron.py  decorators.py  dependencies.py  forms.py  globals.py  main.py  middleware.py  models.py  records.py  schema.py  secrets.py.template  settings.py  settings_local.py.template  tests.py  types.py  urls.py  utils.py  views.py
june/: manage.py  middleware.py  secrets.py.template  settings.py  tests.py  utils.py
march/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  dotenv  go.mod  go.sum  sqlc.yaml
migrations/: 20260217_add_sessions.up.sql  20260221_repo_id.down.sql  20260221_repo_id.up.sql  20260329_add_analysis_metrics.up.sql  20260406_add_projects_is_private.down.sql  20260406_add_projects_is_private.up.sql  20260407_seed_system_user.up.sql  20260531185517_add_projects_owner.down.sql  20260531185517_add_projects_owner.up.sql  20260531185518_seed_projects_owner.up.sql  20260601120000_add_player_boards.down.sql  20260601120000_add_player_boards.up.sql  20260623120000_add_user_is_active_id_index.down.sql  20260623120000_add_user_is_active_id_index.up.sql  env.py  script.py.mako
templates/: base.html  index.html  me.html
tests/: conftest.py  fixtures.py  test_api.py  test_cron.py  test_integration.py  test_models.py  test_schema.py  utils.py
ui/: README.md  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
web/: input.css  web.go
(+557 files in other folders)
